exporting PDF and adding empty states

--- a/app/assets/css/vss.scss
+++ b/app/assets/css/vss.scss
@@ -57,7 +57,7 @@
     font-weight:400;
     line-height:1.5;
     color:#6c757d;
-    background-color:#fafbfe;
+    background-color:#fcfcfc;
     -webkit-text-size-adjust:100%;
     -webkit-tap-highlight-color:transparent
    }
@@ -11310,7 +11310,7 @@
    .content-page {
     margin-left:260px;
     overflow:hidden;
-    padding:85px 12px 65px;
+    padding:5px 12px 65px;
     min-height:100vh
    }
    .leftside-menu {
