--- a/app/templates/clients/form.plush.html
+++ b/app/templates/clients/form.plush.html
@@ -1,5 +1,8 @@
 <div class="row">
     <div class="col-lg-4">
+        <%= f.InputTag("Identification", {label: "Identificación", placeholder: "Cédula o Nit"}) %>
+    </div>
+    <div class="col-lg-4">
         <%= f.InputTag("FirstName", {label: "Nombre(s)", placeholder: "Nombre del cliente"}) %>
     </div>
     <div class="col-lg-4">
