--- a/app/templates/interest_rates/edit.plush.html
+++ b/app/templates/interest_rates/edit.plush.html
@@ -3,7 +3,7 @@
         <div class="page-title-box">
             <div class="page-title-right">
                 <a href="<%= interestRatesPath() %>" class="btn btn-secondary ms-1">Cancelar</a>
-                <input type="submit" form="save-form" class="btn btn-primary ms-1" value="Crear Tasa">
+                <input type="submit" form="save-form" class="btn btn-primary ms-1" value="Actualizar">
             </div>
             <h4 class="page-title font-22 fw-normal">Modificar Tasa de Interés</h4>
         </div>
