--- a/app/templates/partials/flash.plush.html
+++ b/app/templates/partials/flash.plush.html
@@ -1,6 +1,6 @@
 <%= for (k, messages) in flash { %>
   <%= for (msg) in messages { %>
-    <div class="alert alert-<%= k %>" role="alert">
+    <div class="alert alert-<%= k %> mt-3" role="alert">
         <div class="container p-0 m-0">
             <div class="row">
               <div class="col-md-12 d-flex justify-content-between align-items-center">
