--- a/app/templates/quotations/new.plush.html
+++ b/app/templates/quotations/new.plush.html
@@ -3,7 +3,7 @@
         <div class="page-title-box">
             <div class="page-title-right">
                 <a href="<%= quotationsPath() %>" class="btn btn-secondary ms-1">Cancelar</a>
-                <input type="submit" form="save-form" class="btn btn-primary ms-1" value="Generar Cotización">
+                <input type="submit" form="save-form" class="btn btn-primary ms-1" value="Crear Cotización">
             </div>
             <h4 class="page-title font-22 fw-normal">Nueva Cotización</h4>
         </div>
