--- a/app/templates/quotations/show.plush.html
+++ b/app/templates/quotations/show.plush.html
@@ -2,8 +2,8 @@
     <div class="row">
         <div class="col-12">
             <div class="page-title-box d-flex align-items-center justify-content-between">
-                <h4 class="page-title font-22 fw-normal">Información de Cotización</h4>
-                <span class="btn btn-primary ms-1 export-pdf">Exportar Cotización</span>
+                <h4 class="page-title font-22 fw-normal">Detalles de Cotización</h4>
+                <span class="btn btn-primary ms-1 export-pdf">Exportar <span class="hide-on-mobile">Cotización</span></span>
             </div>
         </div>
     </div>
