--- a/app/templates/clients/index.plush.html
+++ b/app/templates/clients/index.plush.html
@@ -13,23 +13,23 @@
     <table class="table table-hover table-centered mb-0">
         <thead>
             <tr>
-                <th>Identificación</th>
-                <th>Nombre</th>
-                <th>Email</th>
-                <th>Teléfono</th>
-                <th>Dirección</th>
-                <th></th>
+                <th scope="col">Identificación</th>
+                <th scope="col">Nombre</th>
+                <th scope="col">Email</th>
+                <th scope="col">Teléfono</th>
+                <th scope="col">Dirección</th>
+                <th scope="col"></th>
             </tr>
         </thead>
         <tbody>
             <%= for (client) in clients { %>
                 <tr>
-                    <td><%= client.Identification %></td>
-                    <td><%= client.FullName() %></td>
-                    <td><%= client.Email %></td>
-                    <td><%= client.PhoneNumber %></td>
-                    <td><%= client.Address %></td>
-                    <td>
+                    <td data-label="Identificación"><%= client.Identification %></td>
+                    <td data-label="Nombre"><%= client.FullName() %></td>
+                    <td data-label="Email"><%= client.Email %></td>
+                    <td data-label="Teléfono"><%= client.PhoneNumber %></td>
+                    <td data-label="Dirección"><%= client.Address %></td>
+                    <td data-label="">
                         <a href="<%= editClientPath({client_id: client.ID}) %>" class="btn btn-info btn-sm">Modificar</a>
                         <a href="<%= clientDeletePath({client_id: client.ID}) %>" data-method="DELETE" data-confirm="Estás seguro que quieres elimiar este cliente?" class="btn btn-danger btn-sm">Borrar</a>
                     </td>
