--- a/app/templates/interest_rates/edit.plush.html
+++ b/app/templates/interest_rates/edit.plush.html
@@ -5,7 +5,7 @@
                 <a href="<%= interestRatesPath() %>" class="btn btn-secondary ms-1">Cancelar</a>
                 <input type="submit" form="save-form" class="btn btn-primary ms-1" value="Actualizar">
             </div>
-            <h4 class="page-title font-22 fw-normal">Modificar Tasa de Interés</h4>
+            <h4 class="page-title font-22 fw-normal">Modificar Tasa<span class="hide-on-mobile"> de Interés</span></h4>
         </div>
     </div>
 </div>
