--- a/app/templates/quotations/index.plush.html
+++ b/app/templates/quotations/index.plush.html
@@ -4,7 +4,7 @@
             <div class="page-title-right">
             <a href="<%= newQuotationsPath() %>" class="btn btn-primary ms-1">Nueva Cotización</a>
             </div>
-            <h4 class="page-title font-22 fw-normal">Mis Cotizaciones</h4>
+            <h4 class="page-title font-22 fw-normal"><span class="hide-on-mobile">Mis</span> Cotizaciones</h4>
         </div>
     </div>
 </div>
@@ -13,27 +13,27 @@
     <table class="table table-hover table-centered mb-0">
         <thead>
             <tr>
-                <th>Tipo de Contrato</th>
-                <th>Plazo</th>
-                <th>Valor del Equipo</th>
-                <th>Valor de Cuota</th>
-                <th>Opcion de Compra</th>
-                <th></th>
+                <th scope="col">Tipo de Contrato</th>
+                <th scope="col">Plazo</th>
+                <th scope="col">Valor del Equipo</th>
+                <th scope="col">Valor de Cuota</th>
+                <th scope="col">Opción de Compra</th>
+                <th scope="col"></th>
             </tr>
         </thead>
         <tbody>
             <%= for (quotation) in quotations { %>
                 <tr>
-                    <td><%= quotation.ContractType %></td>
-                    <td><%= quotation.Term %> Meses</td>
-                    <td><%= toCurrency(quotation.EquipmentValue.Float64) %></td>
-                    <td><%= toCurrency(quotation.Fee) %></td>
+                    <td data-label="Tipo de Contrato" scope="row"><%= quotation.ContractType %></td>
+                    <td data-label="Plazo"><%= quotation.Term %> Meses</td>
+                    <td data-label="Valor del Equipo"><%= toCurrency(quotation.EquipmentValue.Float64) %></td>
+                    <td data-label="Valor de Cuota"><%= toCurrency(quotation.Fee) %></td>
                     <%= if(quotation.ContractType == "Leasing") { %>
-                        <td><%= toCurrency(quotation.PurchaseOptionValue.Float64) %></td>
+                        <td data-label="Opción de Compra"><%= toCurrency(quotation.PurchaseOptionValue.Float64) %></td>
                     <% } else { %>
-                        <td>-</td>
+                        <td data-label="Opción de Compra">-</td>
                     <% } %>
-                    <td>
+                    <td data-label="">
                         <a href="<%= quotationShowPath({quotation_id: quotation.ID}) %>" class="btn btn-success btn-sm">Ver</a>
                         <a href="<%= editQuotationPath({quotation_id: quotation.ID}) %>" class="btn btn-info btn-sm">Modificar</a>
                         <a href="<%= quotationDeletePath({quotation_id: quotation.ID}) %>" data-method="DELETE" data-confirm="Estás seguro que quieres elimiar esta cotización?" class="btn btn-danger btn-sm">Borrar</a>
