--- a/app/templates/application.plush.html
+++ b/app/templates/application.plush.html
@@ -3,7 +3,7 @@
 <head>
 	<title>app</title>
 
-	<meta charset="utf-8" name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
 	<meta name="csrf-param" content="authenticity_token" />
 	<meta name="csrf-token" content="<%= authenticity_token %>" />
 
