--- a/app/assets/css/vss.scss
+++ b/app/assets/css/vss.scss
@@ -6872,6 +6872,9 @@
    .border-5 {
     border-width:5px!important
    }
+   .w-20 {
+    width:20%!important
+   }
    .w-25 {
     width:25%!important
    }
@@ -18493,7 +18496,7 @@ table{
     }
 }
 
-@media (max-width: 767.98px){
+@media (max-width: 1100px){
     .content-page {
         padding-top: 0px;
     }
