--- a/app/templates/interest_rates/index.plush.html
+++ b/app/templates/interest_rates/index.plush.html
@@ -19,7 +19,7 @@
                 <th scope="col">Rango de Precios</th>
                 <th scope="col">Taza Póliza</th>
                 <th scope="col">Opción de Compra</th>
-                <th scope="col"></th>
+                <th scope="col" class="w-20"></th>
             </tr>
         </thead>
         <tbody>
@@ -45,7 +45,7 @@
                     </td>
                     <td data-label="">
                         <a href="<%= editInterestRatePath({interest_rate_id: rate.ID}) %>" class="btn btn-info btn-sm">Modificar</a>
-                        <a href="<%= interestRateDeletePath({interest_rate_id: rate.ID}) %>" data-method="DELETE" data-confirm="Estás seguro que quieres elimiar esta tasa de interés?" class="btn btn-danger btn-sm">Borrar</a>
+                        <a href="<%= interestRateDeletePath({interest_rate_id: rate.ID}) %>" data-method="DELETE" data-confirm="Estás seguro que quieres elimiar esta tasa de interés?" class="btn btn-danger btn-sm ml-1">Borrar</a>
                     </td>
                 </tr>
             <% } %>
