--- a/app/templates/quotations/show.plush.html
+++ b/app/templates/quotations/show.plush.html
@@ -13,7 +13,7 @@
             <h4 class="mb-2">Cliente</h4>
             <p class="mb-1">
                 <b>Identificación: </b>
-                <span class="client-name"><%= quotation.Client.Identification %></span>
+                <span class="client-identification"><%= quotation.Client.Identification %></span>
             </p>
             <p class="mb-1">
                 <b>Nombre: </b>
