--- a/app/templates/application.plush.html
+++ b/app/templates/application.plush.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html class="h-full">
 <head>
-	<title>app</title>
-
+	<title>Sounio Health App</title>
+	<meta name="description" content="Cotizador de alquiler de equipos medicos.">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
 	<meta name="csrf-param" content="authenticity_token" />
 	<meta name="csrf-token" content="<%= authenticity_token %>" />
