--- a/app/templates/quotations/index.plush.html
+++ b/app/templates/quotations/index.plush.html
@@ -34,9 +34,11 @@
                         <td data-label="Opción de Compra">-</td>
                     <% } %>
                     <td data-label="">
-                        <a href="<%= quotationShowPath({quotation_id: quotation.ID}) %>" class="btn btn-success btn-sm">Ver</a>
-                        <a href="<%= editQuotationPath({quotation_id: quotation.ID}) %>" class="btn btn-info btn-sm ml-1">Modificar</a>
-                        <a href="<%= quotationDeletePath({quotation_id: quotation.ID}) %>" data-method="DELETE" data-confirm="Estás seguro que quieres elimiar esta cotización?" class="btn btn-danger btn-sm ml-1">Borrar</a>
+                        <div class="d-flex">
+                            <a href="<%= quotationShowPath({quotation_id: quotation.ID}) %>" class="btn btn-success btn-sm">Ver</a>
+                            <a href="<%= editQuotationPath({quotation_id: quotation.ID}) %>" class="btn btn-info btn-sm ml-1">Modificar</a>
+                            <a href="<%= quotationDeletePath({quotation_id: quotation.ID}) %>" data-method="DELETE" data-confirm="Estás seguro que quieres elimiar esta cotización?" class="btn btn-danger btn-sm ml-1">Borrar</a>
+                        </div>
                     </td>
                 </tr>
             <% } %>
